[gd_scene load_steps=43 format=2]

[ext_resource path="res://Stages/EnemyBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Stages_Reina/Enemies/Skorp/skIdle.png" type="Texture" id=2]
[ext_resource path="res://Stages_Reina/Enemies/Skorp/skShootFire.png" type="Texture" id=3]
[ext_resource path="res://Stages_Reina/Enemies/Skorp/skFireball 5x1.png" type="Texture" id=4]
[ext_resource path="res://Stages_Reina/Enemies/Skorp/Skorp_MOD3.gd" type="Script" id=5]
[ext_resource path="res://Sounds/Classic/S3K_49 - boulder 3.wav" type="AudioStream" id=6]
[ext_resource path="res://Sounds/Classic/S3K_C2 - Fire Sound.wav" type="AudioStream" id=7]
[ext_resource path="res://Stages_Reina/Enemies/Skorp/skFireBig.png" type="Texture" id=8]
[ext_resource path="res://addons/godot-next/gui/debug_label.gd" type="Script" id=9]
[ext_resource path="res://Sounds/Classic/S3K_5F - heavy landing.wav" type="AudioStream" id=10]
[ext_resource path="res://ParticleEffects/alphaMask.gdshader" type="Shader" id=11]
[ext_resource path="res://Stages_Reina/Enemies/Skorp/skThrowBottle.png" type="Texture" id=12]
[ext_resource path="res://Stages_Reina/Enemies/Skorp/bottle.png" type="Texture" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 128, 84 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 86, 86 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 86, 0, 86, 86 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 172, 0, 86, 86 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 258, 0, 86, 86 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 12 )
region = Rect2( 86, 86, 86, 86 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 12 )
region = Rect2( 86, 172, 86, 86 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 12 )
region = Rect2( 0, 172, 86, 86 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 12 )
region = Rect2( 172, 86, 86, 86 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 172, 86, 86, 86 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 86, 86 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 86, 0, 86, 86 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 172, 0, 86, 86 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 0, 86, 86, 86 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 12 )
region = Rect2( 86, 172, 86, 86 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 86, 86 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 12 )
region = Rect2( 86, 0, 86, 86 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 12 )
region = Rect2( 172, 0, 86, 86 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 4 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 7.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "ThrowFinish",
"speed": 15.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": false,
"name": "jump",
"speed": 1.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 14 ), SubResource( 14 ) ],
"loop": false,
"name": "fire",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": false,
"name": "ThrowReady",
"speed": 15.0
} ]

[sub_resource type="GDScript" id=20]
script/source = "extends Node2D
#THIS IS NEVER USED!!!!

const spr = preload(\"res://Stages_Reina/Enemies/Skorp/skFireball 5x1.png\")

var s:float=0
var toDisplay:int=0

class FireTween:
	var progress:float=0 setget _set_progress
	var yPosOffset:float=0
	var curSprite:int=0
	
	func _set_progress(p:float):
		if p>10:
			p=-1
		progress=p

#var fTween:FireTween
var fTweens = []
func _ready():
	set_process(false)
	return
	fTweens.resize(10)
	for i in range(10):
		fTweens[i]=FireTween.new()
		fTweens[i].progress=i-10
	#fTween=FireTween.new()

func _draw():
	for fTween in fTweens:
		if fTween.progress<0:
			continue
		#tex, dest rect, source rect
		draw_texture_rect_region(spr, #texture to draw
			Rect2(fTween.progress*5,-9+fTween.progress*fTween.yPosOffset+pow(fTween.progress,1.3),18,18), #Destination on-screen
			Rect2(fTween.curSprite,0,18,18) #src rect
		)
	#for i in range(toDisplay):
	#	draw_texture(spr,Vector2(i*5,-5+sin(i+s*(float(i)/10.0))*2))
	pass

var timer:float=0.0
func _process(delta):
	timer+=delta
	if timer>.05:
		for f in fTweens:
			f.progress+=1
		#else:
		#s+=1
		update()
		timer=0
			#if s>10:
			#	s=0

#func _input(event):
#	if Input.is_action_pressed(\"ui_right\"):
#		fTween.progress+=1
#	elif Input.is_action_just_pressed(\"ui_up\"):
#		fTween.yPosOffset-=1
#	elif Input.is_action_just_pressed(\"ui_down\"):
#		fTween.yPosOffset+=1
#	elif Input.is_action_pressed(\"ui_left\"):
#		fTween.progress-=1
#	update()
"

[sub_resource type="CanvasItemMaterial" id=21]
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="Curve" id=22]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, -80.9091 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=23]
max_value = 2.0
_data = [ Vector2( 0, 0.559091 ), 0.0, 0.0, 0, 0, Vector2( 1, 1.54318 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=24]
offsets = PoolRealArray( 0.842767, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 128, 48 )

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 200, 48 )

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 24, 64 )

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 64, 30 )

[sub_resource type="ShaderMaterial" id=29]
shader = ExtResource( 11 )
shader_param/clr1 = Color( 0.501961, 0, 0.501961, 1 )

[node name="Skorpion_midboss" instance=ExtResource( 1 )]
position = Vector2( 206.766, 184.292 )
script = ExtResource( 5 )
maxHealth = 20
facing = 1
shapeOverride = SubResource( 1 )
collisionOffset = Vector2( 0, 64 )
use_large_explosion = true

[node name="AnimatedSprite" parent="." index="0"]
frames = SubResource( 19 )
animation = "ThrowReady"
frame = 3
offset = Vector2( 0, -5 )

[node name="VisibilityEnabler2D" parent="." index="4"]
position = Vector2( -52.7158, 70.8867 )
scale = Vector2( 1.9541, 25.1329 )

[node name="SkorpionFire" type="Node2D" parent="." index="6"]
visible = false
position = Vector2( 124, 140 )
scale = Vector2( 4, 4 )
script = SubResource( 20 )

[node name="Particles2DBig" type="CPUParticles2D" parent="." index="7"]
material = SubResource( 21 )
position = Vector2( 116.364, 133.111 )
scale = Vector2( 4, 4 )
amount = 10
texture = ExtResource( 8 )
gravity = Vector2( 150, 0 )
initial_velocity = 10.0
initial_velocity_random = 1.0
linear_accel = 60.0
tangential_accel_curve = SubResource( 22 )
scale_amount_curve = SubResource( 23 )
color_ramp = SubResource( 24 )
anim_offset = 1.0
anim_offset_random = 1.0

[node name="Particles2DSmall" type="CPUParticles2D" parent="." index="8"]
visible = false
material = SubResource( 21 )
position = Vector2( 116.364, 133.111 )
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )
gravity = Vector2( 125, 0 )
initial_velocity = 5.0
initial_velocity_random = 1.0
linear_accel = 3.8
tangential_accel_curve = SubResource( 22 )
scale_amount_curve = SubResource( 23 )
color_ramp = SubResource( 24 )
anim_offset = 1.0
anim_offset_random = 1.0

[node name="FireArea2D1" type="Area2D" parent="." index="9"]
visible = false
position = Vector2( 241.227, 124.359 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="FireArea2D1" index="0"]
shape = SubResource( 25 )

[node name="FireArea2D2" type="Area2D" parent="." index="10"]
position = Vector2( 332, 129.405 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="FireArea2D2" index="0"]
shape = SubResource( 26 )

[node name="footstep" type="AudioStreamPlayer2D" parent="." index="11"]
position = Vector2( -12.6992, 161.915 )
stream = ExtResource( 6 )
bus = "Player/Enemies"

[node name="fireSound" type="AudioStreamPlayer2D" parent="." index="12"]
position = Vector2( 111.912, 137.31 )
stream = ExtResource( 7 )
volume_db = 5.0
bus = "Player/Enemies"

[node name="HeavyLanding" type="AudioStreamPlayer2D" parent="." index="13"]
position = Vector2( -29.2601, 161.874 )
stream = ExtResource( 10 )
bus = "Player/Enemies"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="14"]
position = Vector2( -91.9745, -97.9891 )
rotation = 0.403171
shape = SubResource( 27 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="." index="15"]
position = Vector2( 14.3604, -109.109 )
rotation = 0.537561
shape = SubResource( 28 )

[node name="DebugDistance" type="Label" parent="." index="16"]
margin_left = -100.841
margin_top = -235.88
margin_right = 155.159
margin_bottom = -221.88
rect_scale = Vector2( 4, 4 )
text = "DISTANCE BETWEEN SC. AND PLAYER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugLabel" type="Label" parent="." index="17"]
margin_left = 11.2246
margin_top = -176.227
margin_right = 103.225
margin_bottom = -145.227
rect_scale = Vector2( 3, 3 )
text = "curState = null
position = Vector2( 206.766, 184.292 )
"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
target_path = NodePath("..")
properties = PoolStringArray( "curState", "position" )

[node name="FakeBottle" type="Sprite" parent="." index="18"]
material = SubResource( 29 )
position = Vector2( 44, -152 )
scale = Vector2( 4, 4 )
texture = ExtResource( 13 )
region_enabled = true
region_rect = Rect2( 0, 0, 22, 22 )
